# VoiceDesk

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  streamlit_app.py
.github/: dependabot.yml
.github/workflows/: ci.yml  hf-sync.yml
docs/: demo.gif.PLACEHOLDER.md
src/: pipeline.py
src/api/: server.py
src/llm/: agent.py
src/stt/: base_stt.py
src/tts/: base_tts.py
src/utils/: kb_test.py  logging_config.py
tests/: conftest.py  test_agent.py  test_api.py  test_rag_eval.py  test_stt.py  test_tts.py
